LUT26056 ANTS APPOINTMENT MODULE : FIX ALL RETURNS FROM PULL REQUEST

--- a/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages_fr.properties
@@ -13,6 +13,6 @@ predemandeserial.help=Num\u00E9ro valide obtenu sur
 
 appointmenttitresearch.form.legend=Bienvenue sur le service num\u00e9rique de prise de rendez-vous pour l'obtention d'un titre d'identit\u00e9 (carte nationale d'identit\u00e9 et/ou passeport)
 informations.message=Nous vous informons, qu'au vu du contexte sanitaire actuel, nous nous efforçons d'offrir le maximum de rendez-vous mais leur affichage peut \u00EAtre perturb\u00e9 .
-informations.conditions=Pour que votre rendez-vous se d\u00e9roule dans les meilleures conditions, nous vous invitons à lire les informations pr\u00e9sentes sur la page <a href=\"https://www.paris.fr/\">paris.fr</a> d\u00e9di\u00e9e et \u00e0 constituer votre dossier avant de prendre un rendez-vous.
+informations.conditions=Pour que votre rendez-vous se d\u00e9roule dans les meilleures conditions, nous vous invitons \u00e0 lire les informations pr\u00e9sentes sur la page <a href=\"https://www.paris.fr/\">paris.fr</a> d\u00e9di\u00e9e et \u00e0 constituer votre dossier avant de prendre un rendez-vous.
 appointmentantssearch.form.validate=valider la recherche
 
