--- a/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages_fr.properties
@@ -10,9 +10,22 @@ predemandenumber.label=Nombre de personnes concern\u00E9es *
 
 predemandenumber.help=Nombre de personnes concern\u00E9es par une demande de carte d'identit\u00E9 et/ou de passeport (6 personnes maximum)
 predemandeserial.help=Num\u00E9ro valide obtenu sur
+predemandeForm.inputElementType=text
+predemandeForm.inputElementNameSuffix=predemande_code_
+predemandeForm.inputElementPattern=[A-Z0-9]{10}
+predemandeForm.divTagName=div
+predemandeForm.labelTagName=label
+predemandeForm.inputTagName=input
+predemandeForm.spanTagName=span
+predemandeForm.inputRowClassName=input-row
+predemandeForm.inputWrapperClassName=input-wrapper
+predemandeForm.helptTextClassName=help-text
+predemandeForm.antsLink=https://ants.gouv.fr
+predemandeForm.firstPartAntsPlatformLink=<a href="
+predemandeForm.lastPartAntsPlatformLink=">ants.gouv.fr</a>
+predemandeForm.erroMessage=le nombre de personne selectionné ne doit pas dépasser 6
 
 appointmenttitresearch.form.legend=Bienvenue sur le service num\u00e9rique de prise de rendez-vous pour l'obtention d'un titre d'identit\u00e9 (carte nationale d'identit\u00e9 et/ou passeport)
 informations.message=Nous vous informons, qu'au vu du contexte sanitaire actuel, nous nous efforçons d'offrir le maximum de rendez-vous mais leur affichage peut \u00EAtre perturb\u00e9 .
 informations.conditions=Pour que votre rendez-vous se d\u00e9roule dans les meilleures conditions, nous vous invitons \u00e0 lire les informations pr\u00e9sentes sur la page <a href=\"https://www.paris.fr/\">paris.fr</a> d\u00e9di\u00e9e et \u00e0 constituer votre dossier avant de prendre un rendez-vous.
 appointmentantssearch.form.validate=valider la recherche
-
