--- a/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages_fr.properties
@@ -23,9 +23,11 @@ predemandeForm.helptTextClassName=help-text
 predemandeForm.antsLink=https://ants.gouv.fr
 predemandeForm.firstPartAntsPlatformLink=<a href="
 predemandeForm.lastPartAntsPlatformLink=">ants.gouv.fr</a>
-predemandeForm.erroMessage=le nombre de personne selectionné ne doit pas dépasser 6
+predemandeForm.erroMessage=le nombre de personne selectionn\u00e9 ne doit pas d\u00e9passer 6
 
 appointmenttitresearch.form.legend=Bienvenue sur le service num\u00e9rique de prise de rendez-vous pour l'obtention d'un titre d'identit\u00e9 (carte nationale d'identit\u00e9 et/ou passeport)
-informations.message=Nous vous informons, qu'au vu du contexte sanitaire actuel, nous nous efforçons d'offrir le maximum de rendez-vous mais leur affichage peut \u00EAtre perturb\u00e9 .
+informations.message=Nous vous informons, qu'au vu du contexte sanitaire actuel, nous nous effor\u00E7ons d'offrir le maximum de rendez-vous mais leur affichage peut \u00EAtre perturb\u00e9 .
 informations.conditions=Pour que votre rendez-vous se d\u00e9roule dans les meilleures conditions, nous vous invitons \u00e0 lire les informations pr\u00e9sentes sur la page <a href=\"https://www.paris.fr/\">paris.fr</a> d\u00e9di\u00e9e et \u00e0 constituer votre dossier avant de prendre un rendez-vous.
 appointmentantssearch.form.validate=valider la recherche
+display.fieldsErrorMessage=Un ou plusieurs champs ont \u00e9t\u00e9 saisis incorrectement. Veuillez vous assurer de respecter le sch\u00e9ma d'\u00e9criture requis 
+error.page=Un ou plusieurs param\u00E8tres sont manquants
