LUT-26397 : Implement the Access Controls for the ANTS

--- a/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages_fr.properties
@@ -31,3 +31,5 @@ informations.conditions=Pour que votre rendez-vous se d\u00e9roule dans les meil
 appointmentantssearch.form.validate=valider la recherche
 display.fieldsErrorMessage=Un ou plusieurs champs ont \u00e9t\u00e9 saisis incorrectement. Veuillez vous assurer de respecter le sch\u00e9ma d'\u00e9criture requis 
 error.page=Un ou plusieurs param\u00E8tres sont manquants
+
+accesscontrol.slotsNumberAccessController.name=Nombre de slots
