--- a/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages_fr.properties
@@ -1,15 +1,15 @@
 predemandeserial.label_default=Num\u00E9ro de pr\u00E9 demande *
-predemandeserial.label_1=Num\u00E9ro de pr\u00E9 demande  premi\u00e8re personne *
-predemandeserial.label_2=Num\u00E9ro de pr\u00E9 demande  deuxi\u00e8me personne *
-predemandeserial.label_3=Num\u00E9ro de pr\u00E9 demande  troisi\u00e8me personne *
-predemandeserial.label_4=Num\u00E9ro de pr\u00E9 demande  quatri\u00e8me personne *
-predemandeserial.label_5=Num\u00E9ro de pr\u00E9 demande  cinqui\u00e8me personne *
-predemandeserial.label_6=Num\u00E9ro de pr\u00E9 demande  sixi\u00e8me personne *
+predemandeserial.label_1=Num\u00E9ro de pr\u00E9-demande  premi\u00e8re personne *
+predemandeserial.label_2=Num\u00E9ro de pr\u00E9-demande  deuxi\u00e8me personne *
+predemandeserial.label_3=Num\u00E9ro de pr\u00E9-demande  troisi\u00e8me personne *
+predemandeserial.label_4=Num\u00E9ro de pr\u00E9-demande  quatri\u00e8me personne *
+predemandeserial.label_5=Num\u00E9ro de pr\u00E9-demande  cinqui\u00e8me personne *
+predemandeserial.label_6=Num\u00E9ro de pr\u00E9-demande  sixi\u00e8me personne *
 
 predemandenumber.label=Nombre de personnes concern\u00E9es *
 
 predemandenumber.help=Nombre de personnes concern\u00E9es par une demande de carte d'identit\u00E9 et/ou de passeport (6 personnes maximum)
-predemandeserial.help=Num\u00E9ro valide obtenu sur
+predemandeserial.help=Obtenu sur
 predemandeForm.inputElementType=text
 predemandeForm.inputElementNameSuffix=predemande_code_
 predemandeForm.inputElementPattern=[A-Z0-9]{10}
@@ -24,12 +24,13 @@ predemandeForm.antsLink=https://ants.gouv.fr
 predemandeForm.firstPartAntsPlatformLink=<a href="
 predemandeForm.lastPartAntsPlatformLink=">ants.gouv.fr</a>
 predemandeForm.erroMessage=le nombre de personne selectionn\u00e9 ne doit pas d\u00e9passer 6
+predemandeForm.customValidityMessage=Veuillez indiquer votre num\u00e9ro compos\u00e9 de 10 caract\u00e8res en chiffres et en lettres en capitale
 
 appointmenttitresearch.form.legend=Bienvenue sur le service num\u00e9rique de prise de rendez-vous pour l'obtention d'un titre d'identit\u00e9 (carte nationale d'identit\u00e9 et/ou passeport)
 informations.message=Nous vous informons, qu'au vu du contexte sanitaire actuel, nous nous effor\u00E7ons d'offrir le maximum de rendez-vous mais leur affichage peut \u00EAtre perturb\u00e9 .
 informations.conditions=Pour que votre rendez-vous se d\u00e9roule dans les meilleures conditions, nous vous invitons \u00e0 lire les informations pr\u00e9sentes sur la page <a href=\"https://www.paris.fr/\">paris.fr</a> d\u00e9di\u00e9e et \u00e0 constituer votre dossier avant de prendre un rendez-vous.
 appointmentantssearch.form.validate=valider la recherche
-display.fieldsErrorMessage=Un ou plusieurs champs ont \u00e9t\u00e9 saisis incorrectement. Veuillez vous assurer de respecter le sch\u00e9ma d'\u00e9criture requis 
+display.fieldsErrorMessage=Le num\u00e9ro de pr\u00e9-demande est invalide ou a d\u00e9j\u00E0 \u00e9t\u00e9 utilis\u00e9. Merci de le saisir \u00E0 nouveau.
 error.page=Un ou plusieurs param\u00E8tres sont manquants
 
 accesscontrol.slotsNumberAccessController.name=Nombre de slots
