LUT-26733: change predemandenumber.help label

--- a/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages_fr.properties
@@ -8,7 +8,7 @@ predemandeserial.label_6=Num\u00E9ro de pr\u00E9-demande  sixi\u00e8me personne 
 
 predemandenumber.label=Nombre de personnes concern\u00E9es *
 
-predemandenumber.help=Nombre de personnes concern\u00E9es par une demande de carte d'identit\u00E9 et/ou de passeport (6 personnes maximum)
+predemandenumber.help=Pr\u00E9cisez le nombre de personnes souhaitant obtenir un rendez-vous (6 maximum)
 predemandeserial.help=Obtenu sur
 predemandeForm.inputElementType=text
 predemandeForm.inputElementNameSuffix=predemande_code_
