--- a/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages_fr.properties
@@ -27,10 +27,11 @@ predemandeForm.erroMessage=le nombre de personne selectionn\u00e9 ne doit pas d\
 predemandeForm.customValidityMessage=Veuillez indiquer votre num\u00e9ro compos\u00e9 de 10 caract\u00e8res en chiffres et en lettres en capitale
 
 appointmenttitresearch.form.legend=Bienvenue sur le service num\u00e9rique de prise de rendez-vous pour l'obtention d'un titre d'identit\u00e9 (carte nationale d'identit\u00e9 et/ou passeport)
-informations.message=Nous vous informons, qu'au vu du contexte sanitaire actuel, nous nous effor\u00E7ons d'offrir le maximum de rendez-vous mais leur affichage peut \u00EAtre perturb\u00e9 .
+informations.message=Nous vous informons, qu'au vu du contexte sanitaire actuel, nous nous effor\u00E7ons d'offrir le maximum de rendez-vous mais leur affichage peut \u00EAtre perturb\u00e9.
 informations.conditions=Pour que votre rendez-vous se d\u00e9roule dans les meilleures conditions, nous vous invitons \u00e0 lire les informations pr\u00e9sentes sur la page <a href=\"https://www.paris.fr/\">paris.fr</a> d\u00e9di\u00e9e et \u00e0 constituer votre dossier avant de prendre un rendez-vous.
 appointmentantssearch.form.validate=valider la recherche
-display.fieldsErrorMessage=Le num\u00e9ro de pr\u00e9-demande est invalide ou a d\u00e9j\u00E0 \u00e9t\u00e9 utilis\u00e9. Merci de le saisir \u00E0 nouveau.
+display.fieldsErrorMessage=Le num\u00e9ro de pr\u00e9-demande est invalide ou a d\u00e9j\u00E0 \u00e9t\u00e9 utilis\u00e9. Merci d'en saisir un nouveau.
+display.predemandeCodesNotUniqueErrorMessage=Le m\u00EAme num\u00e9ro de pr\u00e9-demande ne peut pas \u00EAtre utilis\u00e9 plusieurs fois
 error.page=Un ou plusieurs param\u00E8tres sont manquants
 
 accesscontrol.slotsNumberAccessController.name=Nombre de slots
