--- a/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages_fr.properties
@@ -31,7 +31,7 @@ informations.message=Nous vous informons, qu'au vu du contexte sanitaire actuel,
 informations.conditions=Pour que votre rendez-vous se d\u00e9roule dans les meilleures conditions, nous vous invitons \u00e0 lire les informations pr\u00e9sentes sur la page <a href=\"https://www.paris.fr/\">paris.fr</a> d\u00e9di\u00e9e et \u00e0 constituer votre dossier avant de prendre un rendez-vous.
 appointmentantssearch.form.validate=valider la recherche
 display.fieldsErrorMessage=Le num\u00e9ro de pr\u00e9-demande est invalide ou a d\u00e9j\u00E0 \u00e9t\u00e9 utilis\u00e9. Merci d'en saisir un nouveau.
-display.predemandeCodesNotUniqueErrorMessage=Le m\u00EAme num\u00e9ro de pr\u00e9-demande ne peut pas \u00EAtre utilis\u00e9 plusieurs fois
-error.page=Un ou plusieurs param\u00E8tres sont manquants
+display.predemandeCodesNotUniqueErrorMessage=Le m\u00EAme num\u00e9ro de pr\u00e9-demande ne peut pas \u00EAtre utilis\u00e9 plusieurs fois.
+error.page=Un ou plusieurs param\u00E8tres sont manquants.
 
 accesscontrol.slotsNumberAccessController.name=Nombre de slots
