LUT-27613 : Add ANTS token configuration to site properties

--- a/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages_fr.properties
@@ -19,3 +19,8 @@ display.fieldsErrorMessage=Le num\u00e9ro de pr\u00e9-demande est invalide ou a 
 display.predemandeCodesNotUniqueErrorMessage=Le m\u00EAme num\u00e9ro de pr\u00e9-demande ne peut pas \u00EAtre utilis\u00e9 plusieurs fois.
 
 accesscontrol.slotsNumberAccessController.name=Nombre de slots
+
+site_properties.name=Propri\u00e9t\u00e9s ANTS
+site_properties.description=Propri\u00e9t\u00e9s sp\u00e9cifiques \u00e9ditables d'ANTS
+site_property.token=Token API ANTS
+site_property.token.help=Ins\u00e9rez un token API ANTS valide
